Worked on the view, edited the controllers where needed